<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".teacherlogin"
    android:orientation="vertical"
    android:background="@drawable/signinback"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/fstbtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/rectangle" />
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/pro_image"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <ImageView
            android:id="@+id/secbtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:src="@drawable/rectangle2"
            android:layout_marginTop="270dp"
            />
        <ImageView
            android:id="@+id/forbtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="45dp"
            android:layout_marginLeft="-12dp"
            android:layout_marginRight="-12dp"
            android:layout_marginTop="270dp"
            android:src="@drawable/image"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/trdbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#040B37"
            android:text="@string/student"
            android:padding="10dp"
            android:contextClickable="true"
            android:textColor="#FFEB3B"
            android:textSize="18sp"
            android:layout_marginLeft="31dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="-65dp"
            android:background="@drawable/rec"
            android:textStyle="bold"
            android:fontFamily="serif"/>

        <TextView
            android:id="@+id/twlbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginTop="-65dp"
            android:backgroundTint="#040B37"
            android:text="Teachers login"
            android:paddingBottom="8dp"
            android:contextClickable="true"
            android:textColor="#FFEB3B"
            android:layout_marginRight="31dp"
            android:textSize="18sp"
            android:background="@drawable/rec"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/fivbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Teacher ID"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center|left"
            android:layout_marginTop="40dp"
            android:src="@drawable/add_friend" />

        <EditText
            android:id="@+id/sixbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:background="@drawable/rec"
            android:hint="Enter here"
            android:backgroundTint="@color/white"
            android:fontFamily="serif"
            android:autofillHints="emailAddress"
            android:textColorHint="@color/black"
            android:layout_marginTop="40dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/sevenbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:text="Password"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center|left"
            android:layout_marginTop="135dp"
            android:src="@drawable/reset_password"/>


        <EditText
            android:id="@+id/eightbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:background="@drawable/rec"
            android:hint="Enter here"
            android:backgroundTint="@color/white"
            android:fontFamily="serif"
            android:autofillHints="password"
            android:textColorHint="@color/black"
            android:layout_marginTop="140dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <Button
            android:id="@+id/tenbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFEB3B"
            android:contextClickable="true"
            android:padding="10dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="120dp"
            android:text="@string/studentlogin"
            android:textColor="#040B2E"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/elbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contextClickable="true"
            android:text="@string/forget"
            android:layout_gravity="bottom"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="34dp"
            android:textColor="#FFEB3B"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/signbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:clickable="true"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="50dp"
            android:layout_marginRight="34dp"
            android:text="@string/Signup"
            android:textColor="#FFEB3B"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

   </androidx.constraintlayout.widget.ConstraintLayout>
