<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/signinback"
        >
        <ImageView
            android:id="@+id/homeimg"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            android:src="@drawable/new55"
            />
        <ImageView
            android:id="@+id/homicn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/btn"
            android:src="@drawable/home"
            android:clickable="true"
            android:focusable="true" />
        <TextView
            android:id="@+id/hometx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HOME"
            android:clickable="true"
            android:layout_below="@+id/homicn"
           android:textColor="@color/black"
            android:textStyle="italic|bold"
            android:focusable="true" />
        <ImageView
            android:id="@+id/homebtn"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/login"
            android:clickable="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/finalend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/homebtn"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-5dp"
            android:clickable="true"
            android:onClick="openfinal"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:text="login/signup"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="italic|bold" />


        <ImageView
            android:id="@+id/collage"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="70dp"
            android:scaleType="fitXY"
           />

        <ImageView
            android:id="@+id/home5"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_below="@+id/homeimg"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/rec" />

        <ImageView
            android:id="@+id/home22"
            android:layout_width="97dp"
            android:layout_height="98dp"
            android:layout_below="@+id/homeimg"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/attendance" />

        <TextView
            android:id="@+id/frsttxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home22"
            android:text="Attendance"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:textSize="23sp"
            android:layout_marginLeft="2dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/home6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/homeimg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/rec" />

        <ImageView
            android:id="@+id/home44"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/homeimg"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/sylabsu"
            android:clickable="true"
            android:onClick="open_main"
            />

        <TextView
            android:id="@+id/sylabus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home44"
            android:layout_marginLeft="25px"
            android:text="Syllabus"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginRight="5dp"
         android:layout_alignRight="@+id/home44"
            android:textStyle="bold"
            android:fontFamily="serif"/>
        <ImageView
            android:id="@+id/home67"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/homeimg"
           android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/rec" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/home66"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/homeimg"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25dp"
            android:layout_marginRight="9dp"
            android:src="@drawable/score" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home44"
           android:layout_alignParentRight="true"
            android:text="Results"
            android:layout_marginRight="20dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:contextClickable="true"
            android:fontFamily="serif"/>
        <ImageView
            android:id="@+id/home7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/frsttxt"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/rec"
            />
        <ImageView
            android:layout_width="98dp"
            android:layout_height="98dp"
          android:layout_below="@+id/frsttxt"
           android:layout_marginTop="25dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/delegation"/>

        <TextView
            android:id="@+id/fourttxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home7"
            android:layout_marginLeft="2dp"
            android:text="Assignment"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold"
            android:fontFamily="serif" />
        <ImageView
            android:id="@+id/home10"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/sylabus"
            android:layout_marginTop="25dp"
          android:layout_centerHorizontal="true"
            android:src="@drawable/rec"
            />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/sylabus"
            android:layout_centerInParent="true"
            android:layout_marginTop="29dp"
            android:src="@drawable/cal" />
        <TextView
            android:id="@+id/fivttxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home7"
            android:text="RGPV-Calendar"
            android:textColor="@color/black"
            android:textSize="18sp"
          android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:fontFamily="serif"/>

        <TextView
            android:id="@+id/cobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collage"
            android:background="@drawable/buttonfor"
            android:textColor="@color/white"
           android:layout_below="@+id/fourttxt"
            android:backgroundTint="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:layout_centerVertical="true"

            android:textSize="25sp"

            android:textStyle="bold|bold"

            />

        <ImageView
            android:id="@+id/home68"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/result"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/rec" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/notes"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/notes"
            android:layout_below="@+id/result"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="28dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RGPV-Notes"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:layout_below="@+id/notes"
            android:layout_alignParentRight="true"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:scaleType="fitXY"
            android:layout_marginTop="5dp"
            android:src="@drawable/line"
            android:layout_below="@+id/cobtn"/>


        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cobtn"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/buttonfor"
            android:backgroundTint="@color/black"
            android:fontFamily="serif"
            android:text="@string/declare"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
<Button
    android:id="@+id/about2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Click Me"
    android:textStyle="bold"
    android:textSize="20sp"
    android:fontFamily="serif"
    android:clickable="true"
    android:onClick="openMain"
    android:layout_centerHorizontal="true"
    android:backgroundTint="@color/black"
    android:textColor="@color/white"
    android:layout_below="@+id/about"/>


    </RelativeLayout>
</ScrollView>

